# todo_console2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
App/Include/: FileTaskRepository.hpp  JsonSerialization.hpp  Task.hpp
App/Source/: Config.cpp  FileTaskRepository.cpp  JsonSerialization.cpp  Task.cpp
code/: main.cpp
code/config/: config.cpp  config.hpp
code/console_ui/: console_ui.cpp  console_ui.hpp
code/entities/: task.cpp  task.hpp
code/json_serialization/: json_serialization.cpp  json_serialization.hpp
code/repository/: file_task_repository.cpp  file_task_repository.hpp  task_repository.hpp  task_repository_factory.cpp  task_repository_factory.hpp
